--- a/backend/lib/tasky_web/controllers/tasks_html/index.html.heex
+++ b/backend/lib/tasky_web/controllers/tasks_html/index.html.heex
@@ -48,7 +48,4 @@
 </div>
 
 <!-- ReScript enhancement will be mounted here -->
-<div id="sidebar-root"></div>
-
-<script type="module" src={~p"/assets/js/tasks_index.js"}>
-</script>
+<div id="root"></div>
