--- a/backend/lib/tasky_web/components/layouts/root.html.heex
+++ b/backend/lib/tasky_web/components/layouts/root.html.heex
@@ -23,7 +23,7 @@
       <% end %>
     <% end %>
   </head>
-  <body class="bg-white">
+  <body class="bg-white dark:bg-stone-900 dark:text-white">
     {@inner_content}
   </body>
 </html>
