--- a/backend/lib/tasky_web/controllers/tasks_html/index.html.heex
+++ b/backend/lib/tasky_web/controllers/tasks_html/index.html.heex
@@ -1,9 +1,13 @@
-<h1 class="text-2xl font-bold mb-6">Tasks</h1>
-
-<div id="tasks-container" data-tasks={Jason.encode!(@tasks)}>
-  <div class="overflow-x-auto bg-white shadow-md rounded-lg">
+<section id="tasks-container" class="space-y-4">
+  <header class="flex flex-row justify-between items-end">
+    <h1 class="text-2xl font-bold">Tasks</h1>
+    <div class="inline-flex flex-row gap-2 justify-end">
+      <button onClick="newTask(this)" class="btn bg-blue-500">New Task</button>
+    </div>
+  </header>
+  <div class="overflow-x-auto shadow-md rounded-lg">
     <table class="min-w-full table-auto">
-      <thead class="bg-gray-100">
+      <thead class="bg-gray-100 dark:bg-slate-600">
         <tr>
           <th class="py-3 px-4 text-left">Title</th>
           <th class="py-3 px-4 text-left">Estimated Time</th>
@@ -16,7 +20,7 @@
         <%= for task <- @tasks do %>
           <tr class={completed_class(task)} data-task-id={task.id}>
             <td class="py-3 px-4 border-b">
-              <button onClick="openSidebarHandler" value={task.id}>{task.title}</button>
+              <button onClick="openSidebar(this)" value={task.id}>{task.title}</button>
             </td>
             <td class="py-3 px-4 border-b">{format_minutes(task.estimated_time)}</td>
             <td class="py-3 px-4 border-b">
@@ -45,7 +49,4 @@
       </tbody>
     </table>
   </div>
-</div>
-
-<!-- ReScript enhancement will be mounted here -->
-<div id="root"></div>
+</section>
