--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,9 @@
 @import "tailwindcss";
 
-@source "../../backend/lib/tasky";
+@source "../../backend/lib/tasky_web";
+
+@layer components {
+  .btn {
+    @apply px-4 py-2 inline-block;
+  }
+}
