Switch to external lib build conf to better leverage shadow-cljs

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,7 @@
 
 /* @source "../../backend/lib/tasky_web"; */
 @source "../**/*.cljs";
+@source "../public/index.html";
 
 @layer components {
   .btn {
