Render index and create task form

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,6 @@
 @import "tailwindcss";
 
-/* @source "../../backend/lib/tasky_web"; */
-@source "../**/*.cljs";
+@source "./**/*.cljs";
 @source "../public/index.html";
 
 @layer components {
