--- a/frontend/public/css/stylesheet.css
+++ b/frontend/public/css/stylesheet.css
@@ -225,6 +225,9 @@
   .-left-4 {
     left: calc(var(--spacing) * -4);
   }
+  .-left-6 {
+    left: calc(var(--spacing) * -6);
+  }
   .-left-8 {
     left: calc(var(--spacing) * -8);
   }
@@ -280,11 +283,17 @@
   .w-16 {
     width: calc(var(--spacing) * 16);
   }
+  .w-\[18\.75rem\] {
+    width: 18.75rem;
+  }
   .w-\[30rem\] {
     width: 30rem;
   }
   .w-full {
     width: 100%;
+  }
+  .max-w-\[18\.75rem\] {
+    max-width: 18.75rem;
   }
   .max-w-full {
     max-width: 100%;
