--- a/frontend/public/css/stylesheet.css
+++ b/frontend/public/css/stylesheet.css
@@ -541,6 +541,10 @@
     --tw-duration: 500ms;
     transition-duration: 500ms;
   }
+  .duration-1000 {
+    --tw-duration: 1000ms;
+    transition-duration: 1000ms;
+  }
   .duration-\[10s\] {
     --tw-duration: 10s;
     transition-duration: 10s;
