Attempt to simplify delete row animation

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,11 +36,11 @@
     @apply text-gray-700 dark:text-gray-500;
   }
 
-  .task-row.enter {
-    @apply bg-red-500/25 transition-opacity transition-discrete duration-500 ease-in-out;
+  .task-row {
+    @apply bg-transparent transition-opacity transition-discrete duration-500 ease-in-out;
   }
 
   .task-row.deleting {
-    @apply opacity-0;
+    @apply bg-red-500/50 opacity-0;
   }
 }
